--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,8 +1,21 @@
+
+
+
+<% if user_signed_in? %> 
+
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+<% else %>
+  <%= button_to "Sign in", new_user_session_path %> 
+<% end %>
+
 <h1><%= current_user.email%></h1>
+
+
+
 <%= render "form", tweet: @tweet %>
 
 
-<%= button_to "logout", destroy_user_session_path, method: :delete%>
+<%# <%= button_to "logout", destroy_user_session_path, method: :delete%> 
 
 
   <% @tweets.each do |tweet| %>
