'add comment' functionality included

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -61,6 +61,7 @@
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
                   } %><br>
+      <%= link_to "comment", tweet_path(tweet) %> <br>           
   <% end %>  
 
 
