navbar rendered as a partial

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,32 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <% if user_signed_in? %> 
-            <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
-          <% else %>
-            <%= button_to "Sign in", new_user_session_path %> 
-          <% end %>   
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <%= current_user&.firstname.to_s + " " + current_user&.lastname.to_s %>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<%= render "navbar" %>
 
 
 
@@ -56,11 +28,11 @@
       <%= tweet.user.lastname %>
       <%= tweet.user.email %> <br>  
       <%= tweet.body %><br>
-      <%= link_to "Edit", edit_tweet_path(tweet) %><br>
+      <%= link_to "Edit", edit_tweet_path(tweet) %>
       <%= link_to "Destroy", tweet_path(tweet), data: {
                     turbo_method: :delete,
                     turbo_confirm: "Are you sure?"
-                  } %><br>
+                  } %><
       <%= link_to " add comment", tweet_path(tweet) %> <br> 
       <% tweet.comments.each do |comment| %>
         <p>
