--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<%= @profile.firstname %>
+<%= @profile.lastname %><br>
+<p>email: <%= @profile.email %><br></p>
+<p>Tweets: </p>
+<% count=1 %>
+<% @profile.tweets.each do |tmp| %>
+	<p><%= count %>)	<%= tmp.body %></p><br>
+	<% count += 1  %>	
+<% end %>	
+
