--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,12 +1,3 @@
-<%= @profile.firstname %>
-<%= @profile.lastname %><br>
-<p>email: <%= @profile.email %><br></p>
-<p>Tweets: </p>
-<% @profile.tweets.each do |tmp| %>
-	<% if tmp.retweeted_tweet_id.nil? %>
-		<p>Original tweet: <%= tmp.body %> </p>
-	<% else %>
-		<p>Retweeted tweet: <%= tmp.body %> </p>
-	<% end %>		
-<% end %>	
+<%= current_user.firstname %>
+<%= current_user.lastname %><br>
 
