--- a/app/views/tweets/_navbar.html.erb
+++ b/app/views/tweets/_navbar.html.erb
@@ -21,7 +21,7 @@
         </li>
         <li class="nav-item">
           
-            <%= button_to "profile", profile_path(current_user.id), method: :get %>
+            <%= button_to "profile", profile_path, method: :get %>
            
         </li>
       </ul>
