--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,12 @@
 <%= current_user.lastname %><br>
 <p>Email: <%= current_user.email %><p><br>
 
+<%= render "form", profile: @profile %>
 
+<% @profiles.each do |profile| %>
+	<%= profile.mobilenumber %><br>
+	<%= profile.address %>
+<% end %>
 
 <% current_user.tweets.each do |tmp| %>
 	<% if tmp.retweeted_tweet_id.nil? %>
