--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,9 +4,11 @@
 
 <%= render "form", profile: @profile %>
 
-<% @profiles.each do |profile| %>
-	<%= profile.mobilenumber %><br>
-	<%= profile.address %>
+<% if @profile1 %>
+	<p>mobile number: <%= @profile1.mobilenumber %></p><br>
+	<p>address: <%= @profile1.address %></p>
+<% else %>
+  <p>No profile information available.</p>
 <% end %>
 
 <% current_user.tweets.each do |tmp| %>
