file upload and tweet are included in one form

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,10 +1,14 @@
 
 <%= form_with model: tweet do |form| %>
   <div>
-    <%= form.label :tweet %><br>
+    <%= form.label :body, 'tweet' %><br>
     <%= form.text_field :body %>
   </div>
 
+  <div>
+    <%= form.label :tweet_file, 'Upload File' %>
+    <%= form.file_field :tweet_file %>
+  </div>
 
 
   <div>
