--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_with model: tweet do |form| %>
+<%= form_with(model: tweet, local: true, html: { multipart: true }) do |form| %>
   <div>
     <%= form.label :body, 'tweet' %><br>
     <%= form.text_field :body %>
