profile picture can be uploaded and profile page can preview profile picture

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -7,6 +7,10 @@
     <%= form.label :address %><br>
     <%= form.text_area :address %>
   </div>
+  <div>
+    <%= form.label :profile_image, 'Profile Image' %>
+    <%= form.file_field :profile_image, accept: 'image/*' %>
+  </div>
 	<div>
     <%= form.submit %>
   </div>
