--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,16 @@
  *
  *= require_tree .
  *= require_self
- */
+*/
+
+.profilepic{
+    width: 100px;
+    height: 100px;
+}
+
+.image_crop{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+}
