--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,13 @@
 	<p>mobile number: <%= @profile1.mobilenumber %></p><br>
 	<p>address: <%= @profile1.address %></p>
 	<% if @profile1.profile_image? %>
-		<%= image_tag(@profile1.profile_image.url) %>
+		<div class = 'container'>
+			<div class = 'row'>
+				<div class = "col-12 col-sm-4 mb-2">
+					<%= image_tag @profile1.profile_image.url, class:'rounded-circle' %>
+				</div>
+			</div>	
+		</div>	
 	<% end %>	
 <% else %>
   <p>No profile information available.</p>
